# injmat

./: COPYING  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in  git_commands
autom4te.cache/: output.0  output.1t  traces.0  traces.1t
datfiles/: angeli2_mats  gs_cgk  mat1  tmp1  trial
src/: crn.c  crn.h  test.c
